@@ -1,3 +1,9 @@
+2012-11-06  Mirko Vukovic  <mirko.vukovic@us.tel.com>
+
+	* gnuplot-interface.lisp (start-gnuplot): Added
+	``native-external-program'' to enable testing of external program
+	invocation
+
 2012-10-27  Mirko Vukovic  <mirko.vukovic@us.tel.com>
 
 	* gnuplot-interface.lisp: Renamed variables *input* and *output*
